--- a/app/views/open_ai/index.html.erb
+++ b/app/views/open_ai/index.html.erb
@@ -1,4 +1,4 @@
 
 <div id="element-to-update"></div>
 <!-- <%= javascript_pack_tag 'open_ai_stream' %> -->
-<%= link_to "Stream OpenAI API", open_ai_stream_openai_api_path %>
+<%= link_to "Stream OpenAI API", open_ai_stream_openai_api_path, remote: true %>
