--- a/app/views/open_ai/index.html.erb
+++ b/app/views/open_ai/index.html.erb
@@ -2,7 +2,7 @@
     <div class="header__logo">
     <%= link_to "AI Travel Planner", root_path %>
     </div>
-    <%= form_with(url: search_plans_path, local: true, method: :get, class: "search-form") do |form| %>
+    <%= form_with(url: open_ai_search_path, local: true, method: :get, class: "search-form") do |form| %>
     <%= form.text_field :keyword, placeholder: "", class: "search-input" %>
     <%= form.submit "検索", class: "search-btn" %>
     <% end %>
