--- a/app/views/open_ai/index.html.erb
+++ b/app/views/open_ai/index.html.erb
@@ -1,27 +1,37 @@
 <header class="header">
-    <div class="header__logo">
-    <%= link_to "AI Travel Planner", root_path %>
+    <div class="header_top">
+        <div class="header__logo">
+        <%= link_to "AI Travel Planner", root_path %>
+        </div>
+        <div class="header__search">
+            <%= form_with(url: open_ai_search_path, local: true, method: :get, class: "search-form") do |form| %>
+            <div class="search-input-container">
+                <%= form.text_field :keyword, placeholder: "", class: "search-input" %>
+                <i class="fa-solid fa-magnifying-glass search-icon"></i>
+            </div>
+            <% end %>
+        </div>
+        <nav class="header__nav">
+            <ul>
+                <li><%= link_to "ログイン", "#" %></li>
+                <li><%= link_to "新規登録", "#" %></li>
+            </ul
+        </nav>
     </div>
-    <%= form_with(url: open_ai_search_path, local: true, method: :get, class: "search-form") do |form| %>
-    <%= form.text_field :keyword, placeholder: "", class: "search-input" %>
-    <%= form.submit "検索", class: "search-btn" %>
-    <% end %>
-    <nav class="header__nav">
-        <ul>
-            <li><%= link_to "ログイン", "#" %></li>
-            <li><%= link_to "新規登録", "#" %></li>
-        </ul
-    </nav>
+    <div class="header_bottom">
+        <nav class="category-nav">
+            <ul>
+            <li><a href="#">国内旅行</a></li>
+            <li><a href="#">海外旅行</a></li>
+            <li><a href="#">バックパッカー</a></li>
+            <li><a href="#">ロードトリップ</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
-<nav class="category-nav">
-    <ul>
-      <li><a href="#">国内旅行</a></li>
-      <li><a href="#">海外旅行</a></li>
-      <li><a href="#">バックパッカー</a></li>
-      <li><a href="#">ロードトリップ</a></li>
-    </ul>
-  </nav>
+
 <main class="container_index">
+    <div id="top"></div>
     <%= render 'layouts/plan_input' %>
     <%= render 'layouts/generated_plan' %>
 </main> 
