ボタン、スライダーのUI変更

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -60,6 +60,9 @@
 .header__nav li {
   margin-left: 15px;
 }
+.header__nav li {
+  margin: 0 20px;
+}
 
 .header__nav a:hover {
   color: var(--font-color);
