--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -3,21 +3,21 @@
     <%= form_with model: @plan, url:  open_ai_create_path, class: 'plan-input-form', remote: true do |form| %>
       <div class="form-group">
         <%= form.label :destination, '目的地' %>
-        <%= form.text_field :destination, class: 'form-control' %>
+        <%= form.text_field :destination, class: 'form-control', id: 'destination-input' %>
       </div>
       <div class="form-group">
         <%= form.label :duration, '日数' %>
         <div class="slider-wrapper">
-          <%= form.range_field :duration, id: "day-slider", min: 1, max: 14, value: 1, oninput: "displayValue(this.value)" %>
-          <span id="day-slider-value">1</span> 日間
+          <%= form.range_field :duration, id: "day-slider", min: 1, max: 14, value: 2, oninput: "displayValue(this.value)" %>
+          <span id="day-slider-value">2</span> 日間
         </div>
       </div>
       <div class="form-group">
         <%= form.check_box :budget_option, class: 'budget-option', id: 'budget-option' %>
           <span>予算</span>
         <div id="budget-input">
-          <%= form.range_field :budget, id: "budget-slider", min: 0, max: 500000, step: 5000, value: 50000, oninput: "displayBudgetValue(this.value)" %>
-          <span id="budget-slider-value">50,000</span> 円
+          <%= form.range_field :budget, id: "budget-slider", min: 0, max: 100000, step: 5000, value: 10000, oninput: "displayBudgetValue(this.value)" %>
+          <span id="budget-slider-value">10,000</span> 円
         </div>
       </div>
       <div class="form-group">
@@ -41,6 +41,6 @@
         <%= form.label :place_to_visit, '訪問地' %>
         <%= form.text_field :place_to_visit, class: 'form-control' %>
       </div>   
-      <%= form.submit 'プランを作成', class: 'submit-button' %>
+      <%= form.submit 'プランを作成', class: 'submit-button hidden' %>
     <% end %>
   </div>
