ビュー等の微調整

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,11 +3,12 @@
   --primary-color: #2a9d8f;
   --secondary-color: #e9c46a;
   --background-color: #f4f4f4;
-  --font-color: #1a6159;;
+  --font-color: #000000;;
   --logo-size: 30px;
   --nav-background-color: #f4f4f4;
   --nav-font-color: #333;
   --hover-color: #2a9d8f;
+  --border-style: 1px solid #66dbc6;
 }
 
 /* General styles */
