--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -3,16 +3,18 @@
 .header {
   position: fixed;
   width: 100%;
+  border-bottom: var(--border-style);
 }
 
 .header_top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 30px;
+  padding: 0px 30px;
   background-color: var(--background-color);
   color: var(--font-color);
   width: 100%;
+  height: 60px;
 
 }
 
@@ -27,13 +29,15 @@
 }
 
 .search-input {
-  width: 100%;
+  width: 400px;
+  height: 40px;
   border: 2px solid #ccc;
-  border-radius: 4px;
+  border-radius: 30px;
   outline: none;
   appearance: none;
   transition: border-color 0.3s, box-shadow 0.3s;
-}
+  background-color: #c6ddda;
+ }
 
 .search-input:focus {
   border-color: #2a9d8f;
