--- a/app/assets/stylesheets/_plan_input.scss
+++ b/app/assets/stylesheets/_plan_input.scss
@@ -1,11 +1,9 @@
 .plan-input {
     flex-shrink: 0;
     width: 400px;
-    margin: 10px 0 10px 0;
     padding: 30px;
     background-color: #eee7e7;
-    border-radius: 4px;
-    box-shadow: 5px -1px 25px  rgba(0, 0, 0, 0.5);
+    border: var(--border-style);
     display: inline-block;
 
   
@@ -27,6 +25,7 @@
       border-radius: 4px;
       outline: none;
       transition: border-color 0.3s, box-shadow 0.3s;
+      
     }
 
     .form-control:focus {
@@ -34,10 +33,19 @@
       box-shadow: 0 0 0 3px rgba(42, 157, 143, 0.25);
     }
 
+     #destination-input {
+      background-color: #c6ddda;
+     }
+
+     #place_to_visit-input {
+      background-color: #ffffff;
+     }
+
     .select-control {
       width: 100%;
       padding: 8px 12px;
       font-size: 16px;
+      color: var(--font-color);
       border: 2px solid #ccc;
       border-radius: 4px;
       outline: none;
@@ -46,7 +54,12 @@
       transition: border-color 0.3s, box-shadow 0.3s;
     }
     
-    .select-control:focus {
+    .select-control:hover {
+      border-color: #2a9d8f;
+      box-shadow: 0 0 0 3px rgba(42, 157, 143, 0.25);
+    }
+
+    .form-control:hover {
       border-color: #2a9d8f;
       box-shadow: 0 0 0 3px rgba(42, 157, 143, 0.25);
     }
@@ -60,7 +73,7 @@
       color: #fff;
       font-size: 16px;
       border: none;
-      border-radius: 4px;
+      border-radius: 30px;
       cursor: pointer;
       transition: background-color 0.2s;
       display: block; 
@@ -125,4 +138,8 @@ display: none;
   text-align: right;
   margin: 10px;
   font-size: 20px;
+}
+
+.font-light {
+  font-weight: lighter;
 }
