--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -39,7 +39,7 @@
       </div> 
       <div class="form-group">
         <%= form.label :place_to_visit, '訪問地' %>
-        <%= form.text_field :place_to_visit, class: 'form-control' %>
+        <%= form.text_field :place_to_visit, class: 'form-control', id: 'place_to_visit-input' %>
       </div>   
       <%= form.submit 'プランを作成', class: 'submit-button hidden' %>
     <% end %>
