--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
     <%= stylesheet_link_tag "https://fonts.googleapis.com/icon?family=Material+Icons", media: "all", rel: "stylesheet" %>
     <%= stylesheet_link_tag "https://use.fontawesome.com/releases/v5.15.4/css/all.css" %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'google_maps' %>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.google_maps_api_key %>&libraries=places&callback=initMap"></script>
+
+
   </head>
 
   <body>
