--- a/app/views/layouts/_right_side.html.erb
+++ b/app/views/layouts/_right_side.html.erb
@@ -1,3 +1,5 @@
 <div class="right_side_container">
-    <div id="map" style="height: 100%; width: 100%;"></div>
+    <div class="map_container">
+        <div id="map"></div>
+    </div>
 </div>
