--- a/app/views/layouts/_generated_plan.html.erb
+++ b/app/views/layouts/_generated_plan.html.erb
@@ -1,4 +1,7 @@
 <div class="generated_plan_container">
+    <div class="loading hidden">
+        <img src="loading.gif" alt="Loading..." height="25">
+    </div>    
     <div id="element-to-update"></div>
 </div>
 
