--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -6,7 +6,7 @@
         <%= form.text_field :destination, class: 'form-control', id: 'destination-input' %>
       </div>
       <div class="form-group">
-        <%= form.label :duration, '日数' %>
+        <!-- <%= form.label :duration, '日数' %> -->
         <div class="slider-wrapper">
           <%= form.range_field :duration, id: "day-slider", min: 1, max: 14, value: 2, oninput: "displayValue(this.value)" %>
           <span id="day-slider-value">2</span> 日間
@@ -20,6 +20,23 @@
           <span id="budget-slider-value">10,000</span> 円
         </div>
       </div>
+<!--    
+      <div class="category-selector custom-category-selector">
+        <%= form.label :activity_id, "選択してください" %>
+        <div class="select-wrapper hidden">
+          <%= form.collection_check_boxes :activity_id, Activity.all, :id, :name, {}, {class: 'select-control'} do |b| %>
+            <div class="option-wrapper">
+              <%= b.check_box(class: 'option-check') %>
+              <%= b.label(class: 'option-label') do %>
+                <%= b.text %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div> -->
+      
+        
+
       <div class="form-group">
         <%= form.label :activity, 'アクティビティ' %>
         <%= form.collection_select(:activity_id, Activity.all, :id, :name, {}, { class: "select-control", id: "activity" }) %>
