--- a/app/views/open_ai/index.html.erb
+++ b/app/views/open_ai/index.html.erb
@@ -12,7 +12,9 @@
             <% end %>
         </div>
         <nav class="header__nav">
+            
             <ul>
+                <li><button id="dark-mode-toggle">Dark</button></li>
                 <li><%= link_to "ログイン", "#" %></li>
                 <li><%= link_to "新規登録", "#" %></li>
             </ul
