--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -186,6 +186,18 @@ body.dark-mode .search-input:focus {
   box-shadow: 0 0 0 3px rgba(233, 196, 106, 0.25);
 }
 
+body.dark-mode .footer {
+  background-color: var(--background-color-dark-mode);
+  padding: 20px 0;
+  text-align: center;
+  border-top: var(--border-style);
+}
+
+body.dark-mode .footer a {
+  color: var(--font-color-dark-mode);
+  text-decoration: none;
+}
+
 
 #dark-mode-toggle {
   width: 50px;
