--- a/app/views/layouts/_generated_plan.html.erb
+++ b/app/views/layouts/_generated_plan.html.erb
@@ -1,7 +1,10 @@
 <div class="generated_plan_container">
-    <div class="loading hidden">
-        <img src="loading.gif" alt="Loading..." height="25">
-    </div>    
+    <!-- loading_container hiddenクラスを外すのはbutton_fade.js -->
+    <div class="loading_container hidden"> 
+        <div class="loading">
+            <img src="loading.gif" alt="Loading..." height="20">
+        </div> 
+   </div>   
     <div id="element-to-update"></div>
 </div>
 
