--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -38,7 +38,8 @@
   appearance: none;
   transition: border-color 0.3s, box-shadow 0.3s;
   background-color: #c6ddda;
- }
+  padding: 30px;
+}
 
 .search-input:focus {
   border-color: #2a9d8f;
