--- a/app/assets/stylesheets/_right_side.scss
+++ b/app/assets/stylesheets/_right_side.scss
@@ -2,14 +2,17 @@
     width: 40%;
     position: relative;
     z-index: 0;
+    
   }
 
 .map_container {
+  padding: 20px; /* 余白のサイズを指定 */
+  width: 100%;
 }  
   
 #map {
     height: 500px; /* 地図の高さを指定 */
-    width: 500px; /* 地図の幅を指定 */
+    width: 100%; /* 地図の幅を指定 */
     position: absolute;
     top: 0;
     left: 0;
