--- a/app/views/open_ai/index.html.erb
+++ b/app/views/open_ai/index.html.erb
@@ -14,6 +14,9 @@
         <nav class="header__nav">
             
             <ul>
+                <li><button id="test_map">Map</button></li>
+                <li><button id="test">Test</button></li>
+                <li><button id="test_2">Test2</button></li>
                 <li><button id="dark-mode-toggle">Dark</button></li>
                 <li><%= link_to "ログイン", "#" %></li>
                 <li><%= link_to "新規登録", "#" %></li>
