--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -8,7 +8,7 @@
       <div class="form-group">
         <!-- <%= form.label :duration, '日数' %> -->
         <div class="slider-wrapper">
-          <%= form.range_field :duration, id: "day-slider", min: 1, max: 14, value: 2, oninput: "displayValue(this.value)" %>
+          <%= form.range_field :duration, id: "day-slider", min: 1, max: 14, value: 2 %>
           <span id="day-slider-value">2</span> 日間
         </div>
       </div>
