--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,10 +1,12 @@
 // Define your variables
 
+
+
 .header {
   position: fixed;
   width: 100%;
   border-bottom: var(--border-style);
-  z-index: 999;
+  z-index: 100;
 }
 
 .header_top {
@@ -15,7 +17,7 @@
   background-color: var(--background-color);
   color: var(--font-color);
   width: 100%;
-  height: 60px;
+  height: var(--headertop-height);
 
 }
 
@@ -58,16 +60,18 @@
   pointer-events: none;
 }
 
+/* header nav */
+
 .header__nav ul {
   display: flex;
   list-style: none;
 }
 
 .header__nav li {
-  margin-left: 15px;
-}
-.header__nav li {
+  display: flex;
+  align-items: center;
   margin: 0 20px;
+  height: 50px;
 }
 
 .header__nav a:hover {
@@ -78,6 +82,12 @@
   color: var(--font-color);
   text-decoration: none;
 }
+
+.signup {
+
+}
+
+
 
 /* Category nav */
 .category-nav {
