--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,7 +13,8 @@
   --nav-font-color: #333;
   --hover-color: #2a9d8f;
   --border-style: 1px solid #66dbc6;
-
+  --headertop-height: 60px;
+  --hover-color: #a79151; 
 }
 
 /* General styles */
@@ -54,6 +55,68 @@ body {
   width: 1000px;
   flex-shrink: 0;
   padding: 40px;
+}
+
+/* Signup Login */
+.signup-form {
+  height: 280px;
+  width: 250px;
+  position: fixed;
+  top: var(--headertop-height);
+  right: 0;
+  background-color: #9ec0bc;
+  border-radius: 8px;
+}
+
+.login-form {
+  height: 210px;
+  width: 250px;
+  position: fixed;
+  top: var(--headertop-height);
+  right: 0;
+  background-color: #9ec0bc;
+  border-radius: 8px;
+}
+
+.form-group {
+  padding: 5px;
+}
+
+.form-text {
+  font-size: 14px;
+  padding-left: 3px;
+}
+
+.auth-btn {
+  width: 200px;
+  margin: 10px auto;
+  padding: 10px 20px;
+  background-color: #2a9d8f;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  display: block; 
+
+  &:hover {
+    background-color: #1f776d;
+  }
+}
+
+.auth-form-control {
+  width: 100%;
+  padding: 8px 12px;
+  font-size: 16px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.text-color {
+  color: #2a9d8f;
 }
 
 /* Footer */
@@ -99,131 +162,8 @@ body {
 }
 
 
-body.dark-mode {
-  background-color: var(--background-color-dark-mode);
-  color: var(--font-color-dark-mode);
+
+.display {
+  display: none;
 }
 
-body.dark-mode .plan-input {
-  background-color: var(--input-background-color-dark-mode);
-  border: 1px solid var(--background-border_style-dark-mode);
-}
-
-body.dark-mode .select-control {
-  background-color: rgba(87, 81, 81, 0.5);
-  color: var(--font-color-dark-mode);
-}
-
-body.dark-mode .form-control {
-  border-color: rgba(87, 81, 81, 0.5);
-
-}
-
-
-body.dark-mode .form-control:focus,
-body.dark-mode .select-control:hover,
-body.dark-mode .form-control:hover {
-  border-color: var(--secondary-color);
-  box-shadow: 0 0 0 3px rgba(233, 196, 106, 0.25);
-  background-color: rgba(60, 60, 60, 0.9);
-}
-
-body.dark-mode .submit-button {
-  background-color: rgba(68, 136, 68, 0.7);
-}
-
-body.dark-mode .submit-button:hover {
-  background-color: #a79151;
-}
-
-body.dark-mode #destination-input {
-  background-color: rgba(87, 81, 81, 0.5);
-  color: var(--font-color-dark-mode);
-}
-
-body.dark-mode #place_to_visit-input {
-  background-color: rgba(87, 81, 81, 0.5);
-  color: var(--font-color-dark-mode);
-}
-
-body.dark-mode .budget-input {
-  background-color: rgba(221, 221, 221, 0.7);
-}
-
-body.dark-mode .budget-option:checked ~ .budget-label ~ .budget-input {
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-//dark-mode header
-body.dark-mode .header {
-  border-bottom: 1px solid var(--background-border_style-dark-mode);
-}
-
-body.dark-mode .header_top {
-  background-color: var(--background-color-dark-mode);
-  color: var(--font-color-dark-mode);
-}
-
-
-body.dark-mode .header a,
-body.dark-mode .category-nav a {
-  color: var(--font-color-dark-mode);
-}
-
-body.dark-mode .category-nav {
-  background-color: var(--input-background-color-dark-mode);
-}
-
-body.dark-mode .category-nav a:hover {
-  color: var(--secondary-color);
-}
-
-body.dark-mode .search-input {
-  background-color: rgba(87, 81, 81, 0.5);
-  border-color: rgba(255, 255, 255, 0.2);
-}
-
-body.dark-mode .search-input:focus {
-  border-color: var(--secondary-color);
-  box-shadow: 0 0 0 3px rgba(233, 196, 106, 0.25);
-}
-
-body.dark-mode .generated_plan_container {
-  border-right: var(--background-border_style-dark-mode);
-}
-
-
-body.dark-mode .footer {
-  background-color: var(--background-color-dark-mode);
-  padding: 20px 0;
-  text-align: center;
-  border-top: var(---background-border_style-dark-mode);
-}
-
-body.dark-mode .footer a {
-  color: var(--font-color-dark-mode);
-  text-decoration: none;
-}
-
-
-#dark-mode-toggle {
-  width: 50px;
-  margin: 0 auto;
-  padding: 3px;
-  background-color: #2a9d8f;
-  color: #fff;
-  font-size: 16px;
-  border: none;
-  border-radius: 12px;
-}
-
-body.dark-mode #dark-mode-toggle {
-  width: 50px;
-  margin: 0 auto;
-  padding: 3px;
-  background-color: #2a9d8f;
-  color: #fff;
-  font-size: 16px;
-  border: none;
-  border-radius: 12px;
-}
