--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -3,8 +3,12 @@
     <%= form_with model: @plan, url:  open_ai_create_path, class: 'plan-input-form', remote: true do |form| %>
       <div class="form-group">
         <%= form.label :destination, '目的地' %>
-        <%= form.text_field :destination, class: 'form-control', id: 'destination-input' %>
+        <%= form.text_field :destination, class: 'form-control'%>
       </div>
+      <div class="form-group">
+        <%= form.label :place_to_visit, '訪問地' %>
+        <%= form.text_field :place_to_visit, class: 'form-control' %>
+      </div> 
       <div class="form-group">
         <!-- <%= form.label :duration, '日数' %> -->
         <div class="slider-wrapper">
@@ -59,7 +63,7 @@
       </div>
       <div class="form-group">
         <%= form.label :place_to_visit, '訪問地' %>
-        <%= form.text_field :place_to_visit, class: 'form-control', id: 'place_to_visit-input' %>
+        <%= form.text_field :place_to_visit, class: 'form-control' %>
       </div>   
       <%= form.submit 'プランを作成', class: 'submit-button hidden' %>
     <% end %>
