--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -78,6 +78,10 @@ body {
   border-radius: 8px;
 }
 
+.auth-form-control {
+
+}
+
 .form-group {
   padding: 5px;
 }
@@ -88,7 +92,7 @@ body {
 }
 
 .auth-btn {
-  width: 200px;
+  width: 210px;
   margin: 10px auto;
   padding: 10px 20px;
   background-color: #2a9d8f;
