エラーの修正等

--- a/app/views/open_ai/index.html.erb
+++ b/app/views/open_ai/index.html.erb
@@ -14,9 +14,9 @@
         <nav class="header__nav">
             
             <ul>
-                <li><button id="test_map">Map</button></li>
+                <!-- <li><button id="test_map">Map</button></li>
                 <li><button id="test">Test</button></li>
-                <li><button id="test_2">Test2</button></li>
+                <li><button id="test_2">Test2</button></li> -->
                 <!-- <i class="fa-regular fa-moon hidden"></i>
                 <i class="fa-regular fa-sun hidden"></i> -->
                 <div id="dark-mode-toggle">
