--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -15,13 +15,13 @@
     <div class='form-text-wrap'>
       <label class="form-text">メールアドレス *</label>
     </div>
-    <%= f.email_field :email, class:"auth-form-control", id:"email", autofocus: true %>
+    <%= f.email_field :email, class:"auth-form-control", id:"email-registration", autofocus: true %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">パスワード *</label>
     </div>
-    <%= f.password_field :password, class:"auth-form-control", id:"password" %>
+    <%= f.password_field :password, class:"auth-form-control", id:"password-registration" %>
     <!-- <p class='info-text'>※6文字以上 英字と数字の両方を含む</p> -->
   </div>
 
