--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -43,6 +43,7 @@ body.dark-mode {
   body.dark-mode .form-control:-webkit-autofill {
     -webkit-text-fill-color: white !important;
     transition: background-color 5000s ease-in-out 0s;
+
   }
 
   
@@ -155,3 +156,10 @@ body.dark-mode {
     // transition: background-color 5000s ease-in-out 0s;
   }
   
+  body.dark-mode .form-title-link li a {
+    color: white;
+  }
+
+    body.dark-mode .form-title-link li a:hover {
+    color: var(--hover-color);
+  }
