--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -1,9 +1,10 @@
-<%#= render "shared/second-header"%>
-<%= form_with model: @user, url: user_registration_path, class: 'registration-main', remote: true do |f| %>
+
+<%= form_with model: resource, as: resource_name, url: registration_path(resource_name), class: 'registration-main', local: true do |f| %>
 
 <div class='form-wrap'>
 
-    <%= render 'devise/shared/error_messages', model: f.object %>
+  <%= render "devise/shared/error_messages", resource: resource %>
+
 
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -13,7 +14,7 @@
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">メールアドレス *</label>
+      <label class="form-text">Eメール *</label>
     </div>
     <%= f.email_field :email, class:"auth-form-control", id:"email", autofocus: true %>
   </div>
