エラーメッセージの日本語化等

--- a/app/assets/stylesheets/auth.scss
+++ b/app/assets/stylesheets/auth.scss
@@ -90,3 +90,8 @@
   .form-title-link li a:hover {
     color: var(--hover-color);
   }
+
+  .error-message {
+    color: rgb(118, 158, 7);
+    font-size: 13px;
+  }
