--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,6 @@
       <li><%= link_to "ログイン", new_user_session_path %></li>
     </ul>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
         <%= f.label :nickname, "ユーザー名" %>
@@ -14,16 +13,31 @@
 
       <div class="field">
         <%= f.label :email, "メールアドレス" %>
+        <% resource.errors.full_messages.each do |message| %>
+          <% if message.include?("メールアドレス") %>
+            <div class="error-message"><%= message %></div>
+          <% end %>
+        <% end %>
         <%= f.email_field :email, class: 'form-control', autofocus: true, autocomplete: "email" %>
       </div>
 
       <div class="field">
         <%= f.label :password, "パスワード　6文字以上" %>
+        <% resource.errors.full_messages.each do |message| %>
+          <% if message.include?("パスワード") && !message.include?("confirmation") %>
+          <div class="error-message"><%= message %></div>
+          <% end %>
+        <% end %>
         <%= f.password_field :password, class: 'form-control', autocomplete: "new-password" %>
       </div>
 
       <div class="field">
         <%= f.label :password_confirmation, "パスワード　確認用" %>
+        <% resource.errors.full_messages.each do |message| %>
+          <% if message.include?("confirmation") %>
+          <div class="error-message">確認用パスワードを正しく入力してください</div>
+          <% end %>
+        <% end %>        
         <%= f.password_field :password_confirmation, class: 'form-control', autocomplete: "new-password" %>
       </div>
 
