--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,6 +61,7 @@
             <ul>
             <li><a href="#">国内旅行</a></li>
             <li><a href="#">海外旅行</a></li>
+            <li><a href="#">インスピレーションガイド</a></li>
             </ul>
         </nav>
     </div>
