Aboutページ作成とフッター位置の訂正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,14 +72,8 @@
     <%= yield %>
   </div>
   <footer class="footer">
-    <div class="footer__links">
-    <ul>
-        <li><%= link_to "利用規約", "#" %></li>
-        <li><%= link_to "プライバシーポリシー", "#" %></li>
-    </ul>
-    </div>
     <div class="footer__copyright">
-    &copy; AI Travel Planner. All rights reserved. Powered by chatGPT.
+      &copy; AI Travel Planner. All rights reserved. Powered by ChatGPT and Google Maps.
     </div>
 </footer> 
 </body>
