--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,24 @@
 <main class="container_about">
+    <section class="feature">
+        <div class="feature_item ">
+            <div class="upper_left">
+                <h3>旅行プランを作成</h3>
+                <p>目的地を選んで簡単にプランを作成しましょう。</p>
+            </div>
+        </div>
+    
+        <div class="feature_item ">
+            <div class="middle_right">
+                <h3>自分だけのオリジナルプランを作成</h3>
+                <p>詳細な希望を選んで、自分だけのオリジナルプランを作成できます。</p>
+            </div>
+        </div>
 
+        <div class="feature_item ">
+            <div class="bottom_left">
+                <h3>インスピレーションガイド</h3>
+                <p>目的地とテンプレートを選択して、おすすめスポットの提案をします。</p>
+            </div>
+        </div>
+    </section>
 </main> 
