--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,27 +1,51 @@
 .container_about {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0px auto;
-    background-image: url('varanasi.jpg');
-    background-size: cover;
-    filter: brightness(30%);
-  }
-  
-  section {
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    margin: 20px;
-    padding: 20px;
-    width: 300px;
-  }
-  
-  section h2 {
-    font-size: 24px;
-    margin-top: 0;
-  }
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  margin: 0 auto;
+  background-image: url('hongkong.jpg');
+  background-size: cover;
+  position: absolute;
+  top: 100px;
+}
 
+.feature {
+  width: 65%;
+  margin: 20px auto;
+}
+
+.feature_item {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.upper_left {
+  width: 100%;  
+  padding-top: 50px;
+  text-align: left;
+}
+
+.middle_right {
+  width: 100%;
+  padding-top: 50px;
+  text-align: center;
+}
+
+.bottom_left {
+  width: 100%;
+  padding-top: 50px;
+  text-align: right;
+}
+
+
+h3 {
+  font-size: 26px;
+  margin-bottom: 5px;
+  color: #666666;
+}
+
+p {
+  font-size: 18px;
+  margin-bottom: 5px;
+  color: #666666;
+}
