--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -33,28 +33,11 @@ body {
 
 }
 
-/* Features */
-.features {
-  display: flex;
-  justify-content: space-around;
-  padding: 50px 0;
-}
-
-.feature {
-  text-align: center;
-  width: 30%;
-}
-
-.feature h2 {
-  font-size: 28px;
-  margin-bottom: 20px;
-}
-
 .container_index {
   width: 100%;
   display: flex;
-  position: absolute;
   top: 100px;
+  height: 1000px;
 }
 
 .container_auth {
@@ -145,19 +128,14 @@ body {
   background-color: var(--primary-color);
   color: #fff;
   padding: 20px 0;
+  height: 50px;
+  width: 100%;
   text-align: center;
-clear: both;
-}
-
-.footer__links ul {
+  position: absolute;
+  top: 1000px;
   display: flex;
   justify-content: center;
-  list-style: none;
-  margin-bottom: 10px;
-}
-
-.footer__links li {
-  margin-left: 15px;
+  align-items: center;
 }
 
 .footer a {
