レイアウト修正等

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,14 +3,14 @@
         <div class="feature_item ">
             <div class="upper_left">
                 <h3>旅行プランを作成</h3>
-                <p>目的地を選んで簡単にプランを作成しましょう。</p>
+                <p>目的地を選んでプランを作成しましょう。</p>
             </div>
         </div>
     
         <div class="feature_item ">
             <div class="middle_right">
                 <h3>自分だけのオリジナルプランを作成</h3>
-                <p>詳細な希望を選んで、自分だけのオリジナルプランを作成できます。</p>
+                <p>詳細な希望を選択して、自分だけのオリジナルプランを作成できます。</p>
             </div>
         </div>
 
