--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -28,14 +28,14 @@ body {
   font-family: "Helvetica Neue", Arial, sans-serif;
   background-color: var(--background-color);
   color: var(--font-color);
-  position: relative;
-  display: block;
-
+  display: flex;
+  flex-direction: column;  
 }
 
 .container_index {
   width: 100%;
   display: flex;
+  position: absolute;
   top: 100px;
   height: 1000px;
 }
@@ -124,23 +124,22 @@ body {
 
 /* Footer */
 .footer {
-  clear: both;
   background-color: var(--primary-color);
   color: #fff;
   padding: 20px 0;
   height: 50px;
   width: 100%;
   text-align: center;
-  position: absolute;
-  top: 1000px;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  bottom: 0;
 }
 
 .footer a {
-  color: #fff;
   text-decoration: none;
+  font-size: 8px;
 }
 
 /* Button styles */
